- Fixed brightness of "background-section.jpg" due to high contrast reading effect; - Applied a kind of darker border around non- title fonts; - Removed circular soft-dark background simulating an alternative shadow due to odd appearance; - Fixed logo dimensions; - Darkened overall shadows; - Applied width transition in ".min-skills" class; - Created "Accessory Skills" section; - Crated a darker base border in "base-stats".

--- a/assets/css/_base-stats-style.scss
+++ b/assets/css/_base-stats-style.scss
@@ -29,7 +29,10 @@ $visited-links-perm: #d0d0d0;
 
 //border shapes
 $border: 1px solid $title-color;
+$border-alt: 1px solid $title-color-alt;
+$border-transparent: 1px solid transparent;
 $border-lg: 2px double $title-color;
+$border-lg-alt: 2px solid $title-color-alt;
 $border-radius: 10px;
 $section-title-radius: 50px;
 
@@ -50,7 +53,7 @@ $min-viewport-width: 280px;
 $name-image-block-limits: 450px;
 $name-min-viewport-height: 700px;
 $name-min-viewport-image-height: 410px;
-$shadow: 0.5vh 0.5vw 1vmax $dark-color;
+$shadow: 0.5vh 0.5vw 0.5vmax $dark-color;
 $shadow-internal: inset 0vh 0vw 1vmax $soft-shadow;
 
 * {
