--- a/assets/css/_header-style.scss
+++ b/assets/css/_header-style.scss
@@ -34,19 +34,19 @@ header {
 			height: 100%;
 		}
 		.logo-container {
-			align-content: flex-end;
 			justify-content: space-around;
 			text-decoration: none;
 			.logo-img {
 				display: flex;
 				.logo-alt {
 					object-fit: contain;
+					max-width: $h1 * 2;
 					width: 7vmax;
 					min-width: $h1;
 				}
 			}
 			em {
-				align-self: flex-end;
+				align-self: center;
 				color: $logo-p-color;
 				display: block;
 				font-size: $h1;
